--- a/website/Dockerfile
+++ b/website/Dockerfile
@@ -37,7 +37,9 @@ RUN apt-get update && \
         $(lsb_release -cs) \
         stable" && \
     apt-get update && \
-    apt-get -y install docker-ce
+    apt-get -y install docker-ce && \
+    curl -L "https://github.com/docker/compose/releases/download/1.23.1/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose && \
+    chmod +x /usr/local/bin/docker-compose
 
 # Copy the website files to bes served
 COPY --chown=www-data . /var/www/html
