--- a/website/Dockerfile
+++ b/website/Dockerfile
@@ -41,6 +41,8 @@ RUN apt-get update && \
     curl -L "https://github.com/docker/compose/releases/download/1.23.1/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose && \
     chmod +x /usr/local/bin/docker-compose
 
+RUN usermod -aG docker www-data
+
 # Copy the website files to bes served
 COPY --chown=www-data . /var/www/html
 
