Refactor to use kill script

--- a/website/docker-compose.yml
+++ b/website/docker-compose.yml
@@ -12,6 +12,7 @@
 #  License for the specific language governing permissions and limitations under
 #  the License.
 
+# Docker Compose Spec Version
 version: '2'
 
 services:
