address sonar exclude files

--- a/.sonarqube/sonar-scanner.properties
+++ b/.sonarqube/sonar-scanner.properties
@@ -23,4 +23,4 @@ sonar.sources=website/scripts/, website/widgets
 sonar.scm.disabled=false
 sonar.scm.enabled=true
 sonar.scm.provider=git
-sonar.exclusions=website/scripts/killPlatform.php
+sonar.exclusions=website/scripts/*
