--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,4 +1,4 @@
-version: 2.1
+version: 2
 #  Copyright (C) 2018-2019 LEIDOS.
 # 
 #  Licensed under the Apache License, Version 2.0 (the "License"); you may not
@@ -61,6 +61,9 @@ jobs:
           command: |
             source ${INIT_ENV}
             bash make_with_coverage.bash -t -e /opt/carma/ -o ./coverage_reports/gcov
+      - persist_to_workspace:
+          root: .
+          path: "/opt/carma/"
       # Run SonarCloud analysis
       # PR Branchs and number extracted from Circle variables and github api
       # Circle CI seems to make a change to the base branch, so we must fetch --force to ensure correct git file change stats
@@ -71,6 +74,14 @@ jobs:
       # sonar.pullrequest.github.token.secured
       # sonar.pullrequest.github.repository
       # Use -X on sonar-scanner to enable debug output
+    
+  sonar:
+    docker:
+      - image: 'circleci/openjdk:11-jdk'
+    steps:
+      - checkout
+      - attach_workspace:
+          at: .
       - run:
           name: Run Sonar Scanner
           command: |
