--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -39,6 +39,7 @@ jobs:
       - run:
           name: Create src folder
           command: |
+            pwd
             source ${INIT_ENV}
             mkdir src
             cd src
@@ -63,7 +64,7 @@ jobs:
             bash make_with_coverage.bash -t -e /opt/carma/ -o ./coverage_reports/gcov
       - persist_to_workspace:
           root: .
-          path: "."
+          path: "./*"
       # Run SonarCloud analysis
       # PR Branchs and number extracted from Circle variables and github api
       # Circle CI seems to make a change to the base branch, so we must fetch --force to ensure correct git file change stats
