--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,7 +29,7 @@ jobs:
     # XTERM used for better catkin_make output
     docker:
       - image: 'cimg/openjdk:15.0.1'
-        user: carma
+       # user: carma
         environment:
           TERM: xterm # use xterm to get full display output from build
         #  INIT_ENV: /home/carma/.base-image/init-env.sh
