--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,11 +33,26 @@ jobs:
         environment:
           TERM: xterm # use xterm to get full display output from build
         #  INIT_ENV: /home/carma/.base-image/init-env.sh
+        
     # Execution steps
     steps:
       - run:
           name: Create src folder
           command: |
+            export SONAR_DIR=/opt/sonarqube
+            sudo mkdir $SONAR_DIR 
+            sudo curl -o $SONAR_DIR/sonar-scanner.zip https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-3.3.0.1492-linux.zip 
+            sudo curl -o $SONAR_DIR/build-wrapper.zip https://sonarcloud.io/static/cpp/build-wrapper-linux-x86.zip
+            cd $SONAR_DIR
+            sudo unzip $SONAR_DIR/sonar-scanner.zip -d . 
+            sudo unzip $SONAR_DIR/build-wrapper.zip -d . 
+            
+            sudo rm $SONAR_DIR/sonar-scanner.zip 
+            sudo rm $SONAR_DIR/build-wrapper.zip 
+
+            sudo mv $(ls $SONAR_DIR | grep "sonar-scanner-") $SONAR_DIR/sonar-scanner/ 
+            sudo mv $(ls $SONAR_DIR | grep "build-wrapper-") $SONAR_DIR/build-wrapper/ 
+            export PATH=$PATH:/opt/jq/:$SONAR_DIR/sonar-scanner/bin/:$SONAR_DIR/build-wrapper/
             mkdir src
             cd src
             mkdir CARMAWebUi
