--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -39,20 +39,20 @@ jobs:
       - run:
           name: Create src folder
           command: |
-            mkdir /opt/sonarqube 
-            cd /opt/sonarqube
-            wget -c https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-3.3.0.1492-linux.zip   -o /opt/sonarqube/sonar-scanner.zip
-            wget -c https://sonarcloud.io/static/cpp/build-wrapper-linux-x86.zip -o /opt/sonarqube/build-wrapper.zip 
-            cd /opt/sonarqube
-            unzip /opt/sonarqube/sonar-scanner.zip -d . 
-            unzip/opt/sonarqube/build-wrapper.zip -d . 
+            sudo mkdir /opt/sonarqube 
+            sudo cd /opt/sonarqube
+            sudo wget -c https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-3.3.0.1492-linux.zip   -o /opt/sonarqube/sonar-scanner.zip
+            sudo wget -c https://sonarcloud.io/static/cpp/build-wrapper-linux-x86.zip -o /opt/sonarqube/build-wrapper.zip 
+            sudo cd /opt/sonarqube
+            sudo unzip /opt/sonarqube/sonar-scanner.zip -d . 
+            sudo unzip/opt/sonarqube/build-wrapper.zip -d . 
             
-            rm /opt/sonarqube/sonar-scanner.zip 
-            rm /opt/sonarqube/build-wrapper.zip 
+            sudo rm /opt/sonarqube/sonar-scanner.zip 
+            sudo  rm /opt/sonarqube/build-wrapper.zip 
 
-            mv $(ls /opt/sonarqube | grep "sonar-scanner-") /opt/sonarqube/sonar-scanner/ 
-            mv $(ls /opt/sonarqube | grep "build-wrapper-") /opt/sonarqube/build-wrapper/ 
-            export PATH=$PATH:/opt/jq/:/opt/sonarqube/sonar-scanner/bin/:/opt/sonarqube/build-wrapper/
+            sudo mv $(ls /opt/sonarqube | grep "sonar-scanner-") /opt/sonarqube/sonar-scanner/ 
+            sudo mv $(ls /opt/sonarqube | grep "build-wrapper-") /opt/sonarqube/build-wrapper/ 
+            sudo export PATH=$PATH:/opt/jq/:/opt/sonarqube/sonar-scanner/bin/:/opt/sonarqube/build-wrapper/
             cd ~
             mkdir src
             cd src
