--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -40,7 +40,7 @@ jobs:
           name: Create src folder
           command: |
             sudo mkdir /opt/sonarqube 
-            sudo cd /opt/sonarqube
+            cd /opt/sonarqube
             sudo wget -c https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-3.3.0.1492-linux.zip   -o /opt/sonarqube/sonar-scanner.zip
             sudo wget -c https://sonarcloud.io/static/cpp/build-wrapper-linux-x86.zip -o /opt/sonarqube/build-wrapper.zip 
             cd /opt/sonarqube
