--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -52,7 +52,8 @@ jobs:
 
             sudo mv $(ls /opt/sonarqube | grep "sonar-scanner-") /opt/sonarqube/sonar-scanner/ 
             sudo mv $(ls /opt/sonarqube | grep "build-wrapper-") /opt/sonarqube/build-wrapper/ 
-            export PATH=$PATH:/opt/jq/:/opt/sonarqube/sonar-scanner/bin/:/opt/sonarqube/build-wrapper/
+            echo "export PATH=$PATH:/opt/jq/:/opt/sonarqube/sonar-scanner/bin/:/opt/sonarqube/build-wrapper/">> $BASH_ENV
+            source $BASH_ENV
             cd ~
             mkdir src
             cd src
