--- a/.sonarqube/sonar-scanner.properties
+++ b/.sonarqube/sonar-scanner.properties
@@ -19,6 +19,9 @@ sonar.organization=usdot-fhwa-stol
 sonar.cfamily.build-wrapper-output=/opt/carma/bw-output
 sonar.host.url=https://sonarcloud.io
 sonar.sources=website/scripts/, website/utils
+sonar.coverageReportPaths=/opt/carma/coverage_reports/gcov/coverage.xml
+sonar.cpp.file.suffixes=.cpp,.h,.tpp
+sonar.c.file.suffixes=-
 # Set Git as SCM sensor
 sonar.scm.disabled=false
 sonar.scm.enabled=true
