--- a/.sonarqube/sonar-scanner.properties
+++ b/.sonarqube/sonar-scanner.properties
@@ -16,7 +16,8 @@
 
 sonar.projectKey=usdot-fhwa-stol_CARMAWebUi
 sonar.organization=usdot-fhwa-stol
-sonar.cfamily.build-wrapper-output=/opt/carma/bw-output
+sonar.cfamily.cache.enabled=false
+sonar.cfamily.compile-commands=/opt/carma/build/compile_commands.json
 sonar.host.url=https://sonarcloud.io
 sonar.sources=website/scripts/, website/utils
 # Set Git as SCM sensor
