--- a/hooks/build
+++ b/hooks/build
@@ -4,6 +4,7 @@ echo "Building $IMAGE_NAME"
 
 docker build --no-cache -t $IMAGE_NAME \
     --build-arg VERSION="$DOCKER_TAG" \
+    --build-arg ACCESS_ID=$ACCESS_ID \
+    --build-arg SECRET_KEY=$SECRET_KEY \
     --build-arg VCS_REF=`git rev-parse --short HEAD` \
     --build-arg BUILD_DATE=`date -u +”%Y-%m-%dT%H:%M:%SZ”` .
-    
