--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -50,7 +50,7 @@ jobs:
           name: Pull CARMAMsgs
           command: |
             source ${INIT_ENV}
-            git clone -b release/lavida --depth 1 git@github.com:usdot-fhwa-stol/carma-msgs.git src/CARMAMsgs
+            git clone -b carma-system-4.5.0 --depth 1 git@github.com:usdot-fhwa-stol/carma-msgs.git src/CARMAMsgs
       - run:
           name: Build Driver
           command: |
