--- a/.sonarqube/sonar-scanner.properties
+++ b/.sonarqube/sonar-scanner.properties
@@ -20,6 +20,8 @@ sonar.cfamily.cache.enabled=false
 sonar.cfamily.compile-commands=/opt/carma/build/compile_commands.json
 sonar.host.url=https://sonarcloud.io
 sonar.sources=website/
+sonar.exclusions=website/thirdparty/
+
 # Set Git as SCM sensor
 sonar.scm.disabled=false
 sonar.scm.enabled=true
